Frontend/gis/src/app/infobox/infobox.component.less
:host {
    background-color: white;
    color: black;
    max-width: 95vw;
    max-height: 80vh;
    overflow: hidden;
    

    /* width */
    &::-webkit-scrollbar {
        width: 5px;
    }

    /* Track */
    // ::-webkit-scrollbar-track {
        // box-shadow: inset 0 0 5px grey;
        // border-radius: 10px;
    // }

    /* Handle */
    &::-webkit-scrollbar-thumb {
        background: rgba(0, 0, 0, 0.25);
        // border-radius: 10px;
    }

    /* Handle on hover */
    &::-webkit-scrollbar-thumb:hover {
        background: rgba(0, 0, 0, 0.3);
    }

    .mat-card {
        max-width: 95vw;
        max-height: 85vh;
        overflow: auto;
    }

    .btngrp {
        width: 100%;
        flex: 1 1 100%;
        box-sizing: border-box;
        align-items: center;
        flex-direction: row;
        display: flex;
        height: 2.5em;
        margin-bottom: 5px;

        .mat-button-toggle {
            text-align: center;
            flex: 1 1 100%;
        }

    }

    .glyph-legend {
        margin-top: 10px;
        display: flex;
        flex-direction: row;
        justify-content: center;

        .glyph-tile {
            cursor: pointer;
            // margin-left: 5px;
            display: flex;
            flex-direction: column;
            justify-content: center;

            .rect {
                width: 32px;
                height: 32px;
                border-color: rgb(204, 204, 204);
                border-width: 5px;
                border-style: solid;
            }

            .text {
                font-size: 11px;
                text-align: center;
            }
        }
    }

    .color-expl {
        display:block;
        text-align: center;
        font-size: 10px;
    }

    .glyph-color-legend {
        margin-top: 10px;
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: center;
        margin-bottom: 5px;

        .glyph-tile {
            display: flex;
            flex-direction: row;
            justify-content: flex-start;
            margin-top: 10px;

            .circle {
                border-radius: 50%;
                width: 10px;
                height: 10px;
            }
    
            .text {
                margin-left: 2px;
                margin-right: 5px;
                font-size: 10px;
                line-height: 10px;
            }
        }

        
    }
}

.legend {
    width: 200px;
    padding-left: 20px;
}

a:link, a:visited {
    color: gray;
    text-align: center;
    text-decoration: none;
    display: inline-block;
}

a:hover, a:active {
    color: black;
}

.logocontainer{
    position:relative;
}

.logo {
    width: 50px;
    position: absolute;
    right: 10px;
    top: 0px;
}

// ::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
//     background-color: blue; /*replace with your color*/
// }

// ::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
//     background-color: skyblue;  /*replace with your color*/
// }

mat-card {
    max-height: 90vh;
    overflow-y: auto;

    .mat-divider-horizontal {
        position: relative;
        margin-top: 5px;
        margin-bottom: 5px;
    }
}

.legendebeschreibung li{
    width: 200px;
    font-size: small;
    margin-left: -10px;
}

.aggregationsstufen img{
    width: 100px;
}

.mat-radio-button ~ .mat-radio-button {
    margin-left: 16px;
}

// .covid-form div {
    // padding-top: 10px;
// }

// .toggleGroup {
//   padding: 20px 0;
// }

h5 {
    margin-top: 5px;
    margin-bottom: 1px;
}

.footer {
    display: block;
    padding-top: 20px;
}

.flexPanelTitle {
    display: flex;
    align-content: center;

    span {
        line-height: 24px;
        margin-left: 5px;
    }
}

.stats {
    color: #8c8c8c;
}

